--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@
 .fade-out {
   opacity: 0;
 }
+
+/* Hide scrollbar for all browsers */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
