--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --font-primary: 'Montserrat', sans-serif;
   --font-secondary: 'Lato', sans-serif;
   --font-tertiary: 'Roboto', sans-serif;
-  --color-primary: #16d4f6; /* sky-600 */
+  --color-primary: #56d3e9; /* sky-600 */
   --color-secondary: #0f172a; /* slate-900 */
   --color-accent: #f59e0b; /* amber-500 */
 }
@@ -20,6 +20,18 @@ body {
   color: #1f2937;
   margin: 0;
   padding: 0;
+}
+
+.font-primary{
+    font-family: var(--font-primary);
+}
+
+.font-secondary{
+    font-family: var(--font-secondary);
+}
+
+.font-tertiary{
+    font-family: var(--font-tertiary);
 }
 
 /* Utility classes for reuse */
@@ -42,7 +54,7 @@ html {
 }
 
 .text-sky{
-    color: #16d4f6;
+    color: var(--color-primary);
 }
 
 .text-secondry{
